--- a/3122004883/四则运算生成器/index.html
+++ b/3122004883/四则运算生成器/index.html
@@ -90,6 +90,10 @@
   <div class="left-section">
     <h1>小学四则运算生成器</h1>
     <div class="input-group">
+      <label for="numSetUp">生成数字的范围:</label>
+      <input type="number" id="numSetUp" min="1" value="10">
+    </div>
+    <div class="input-group">
       <label for="numQuestions">生成题目数量:</label>
       <input type="number" id="numQuestions" min="1" value="10">
     </div>
@@ -124,6 +128,8 @@
   let userAnswers = [];
   function generateQuestions() {
     const numQuestions = parseInt(document.getElementById('numQuestions').value, 10);
+
+
     questions = [];
     answers = [];
     const questionsDiv = document.getElementById('questions');
@@ -173,13 +179,16 @@
   }
 
   function generateNumber() {
+
+    const numSetUp = parseInt(document.getElementById('numSetUp').value, 10);
+    
     const isFraction = Math.random() > 0.5;
     if (isFraction) {
       const numerator = Math.floor(Math.random() * 10) + 1;
       const denominator = Math.floor(Math.random() * 10) + 1;
       return convertToMixedNumber(`${numerator}/${denominator}`);
     } else {
-      return Math.floor(Math.random() * 100).toString();
+      return Math.floor(Math.random() * numSetUp).toString();
     }
   }
 
